Update dependencies and plugins